fixed registration page

--- a/http-server/project.html
+++ b/http-server/project.html
@@ -8,6 +8,6 @@
     <body>
         <h1>projects</h1>
         <h3>Project List</h3>
-        <a href="/registration.html">click here for registration.</a>
+        <a href="/registration">click here for registration.</a>
     </body>
 </html>
