--- a/http-server/registration.html
+++ b/http-server/registration.html
@@ -2,7 +2,6 @@
 
 <head>
   <title>Form Validation</title>
-  <link rel="stylesheet" href="index.css" />
 </head>
 
 <body>
@@ -47,7 +46,7 @@
   </div>
 
 
-<script src="index.js"></script>
+<script src="registration.js"></script>
 </body>
 
 </html>
